FreeST/test/Programs/ValidTests/SessionTypes/wildWild/wildWild.fst
main : Bool
main =
  let (_, _) = new Skip in
  True
