FreeST/test/Programs/InvalidTests/Kinding/recaa/recaa.fst
main : rec a. a
main = let (c, _) = new Skip in c
